--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,3 +27,40 @@ lightshadow {
   background: #55b9f3;
   box-shadow: 20px 20px 60px #489dcf, -20px -20px 60px #62d5ff;
 }
+
+.scrollbar {
+  float: left;
+  max-height: 100vh;
+  overflow-y: auto;
+  margin-bottom: 25px;
+}
+
+.force-overflow {
+  min-height: 450px;
+}
+
+#wrapper {
+  text-align: center;
+  margin: auto;
+}
+
+/*
+ *  STYLE 1
+ */
+
+#style-1::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+#style-1::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+
+#style-1::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
+}
